--- a/MyFlutterApp/app/src/main/res/layout/activity_main.xml
+++ b/MyFlutterApp/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,12 @@
         android:text="创建flutter view"
     />
 
+
+    <Button
+        android:id="@+id/btn_send_to_flutter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="发送消息给flutter"/>
+
+
 </RelativeLayout>
